@@ -5,6 +5,7 @@ import lombok.*;
 import org.hibernate.annotations.CreationTimestamp;
 import org.hibernate.annotations.UpdateTimestamp;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.time.LocalDateTime;
@@ -12,6 +13,7 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @ToString
 @Entity
@@ -39,19 +41,19 @@ public class UsuarioEntidade implements UserDetails {
 
     @Column(name = "usu_bl_ativo")
     @Builder.Default
-    private boolean usuBlAtivo = false;
+    private boolean usuBlAtivo = Boolean.TRUE;
 
     @Column(name = "usu_bl_conta_bloqueada")
     @Builder.Default
-    private boolean usuBlContaBloqueada = true;
+    private boolean usuBlContaBloqueada = Boolean.FALSE;
 
     @Column(name = "usu_bl_conta_expirada")
     @Builder.Default
-    private boolean usuBlContaExpirada = true;
+    private boolean usuBlContaExpirada = Boolean.FALSE;
 
     @Column(name = "usu_bl_credencial_expirada")
     @Builder.Default
-    private boolean usuBlCredencialExpirada = true;
+    private boolean usuBlCredencialExpirada = Boolean.FALSE;
 
     @CreationTimestamp
     @Column(name = "usu_dt_created_at")
@@ -68,8 +70,10 @@ public class UsuarioEntidade implements UserDetails {
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
         return usuListPerfis.stream()
-                .map(PerfilUsuarioRelacionamento::getPuObjPerfil)
-                .toList();
+                .map(PerfilUsuarioRelacionamento::getPuObjPerfil)  // Obtém o perfil
+                .map(PerfilEntidade::getAuthority)  // Obtém o identificador do perfil
+                .map(SimpleGrantedAuthority::new)  // Cria uma autoridade a partir do identificador
+                .collect(Collectors.toList());  // Coleta em uma lista
     }
 
     @Override
@@ -99,6 +103,6 @@ public class UsuarioEntidade implements UserDetails {
 
     @Override
     public boolean isEnabled() {
-        return usuBlContaExpirada;
+        return usuBlAtivo;
     }
 }
